tests/semantic/valid/test_forward_ref.src
fn bar() : int {
    return foo();
}

fn foo() : int {
    return 42;
}
