tests/semantic/invalid/test_bad_return.src
fn get_value() : int {
    return true;
}
